--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^3.8.0
   flutter:
     sdk: flutter
+  flutter_rating_bar: ^4.0.1
   get: ^4.6.6
   google_fonts: ^6.2.1
   intl: ^0.20.1
