--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   get: ^4.6.6
   google_fonts: ^6.2.1
+  grouped_list: ^6.0.0
   intl: ^0.20.1
   shared_preferences: ^2.3.3
 
