--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,12 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "asset/logo_foreground.png"
 
 flutter:
   uses-material-design: true
