--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,13 @@ dependencies:
   grouped_list: ^6.0.0
   intl: ^0.20.1
   shared_preferences: ^2.3.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.3
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.14.3
 
 flutter_icons:
   android: true
